--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
-
 {% block content %}
-    <h1>Dashboard</h1>
-    <p> Bem vendo ao seu Dashboard</p>
-
+<h1>Dashboard</h1>
+<p>Bem vindo ao seu dashboard.
+    Você pode <a href="{% url 'edit' %}"> editar seu perfil</a> ou <a href="{% url 'password_change' %}"> alterar sua senha</a>.
+</p>
 {% endblock %}
-
