--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -2,7 +2,7 @@
 {% block title %}Log-in{% endblock %}
 {% block content %}
 <h1>Log-in</h1>
-<p>Please, use the following form to log-in:</p>
+<p>Entre com sua conta:</p>
 <form method="post">
 {{ form.as_p }}
 {% csrf_token %}
