--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -7,29 +7,39 @@
 </head>
 <body>
 <div id="header">
-<span class="logo">Central de Imagens</span>
+<span class="logo">Sistema de Imagens</span>
 {% if request.user.is_authenticated %}
-<ul class="menu"> 
-    <li {% if section == "dashboard" %} class="selected" {% endif %}>
-        <a href="{% url 'dashboard' %}">Meu Dashboard</a>
-    </li>
-    <li {% if section == "images" %} class="selected" {% endif %}>
-        <a href="#">Imagens</a>
-    </li>
-    <li {% if section == "people" %}class="selected"{% endif %}>
-        <a href="#">Pessoas</a>
-    </li>
+<ul class="menu">
+<li {% if section == "dashboard" %}class="selected"{% endif %}>
+<a href="{% url "dashboard" %}">Meu dashboard</a>
+</li>
+<li {% if section == "images" %}class="selected"{% endif %}>
+<a href="#">Imagens</a>
+</li>
+<li {% if section == "people" %}class="selected"{% endif %}>
+<a href="#">Pessoas</a>
+</li>
 </ul>
 {% endif %}
 <span class="user">
 {% if request.user.is_authenticated %}
-Hello {{ request.user.first_name|default:request.user.username }},
-<a href="{% url "logout" %}">Logout</a>
+Olá!! {{ request.user.first_name|default:request.user.username }},
+<a href="{% url "logout" %}">Desconectar</a>
 {% else %}
 <a href="{% url "login" %}">Log-in</a>
 {% endif %}
 </span>
 </div>
+{% if messages %}
+<ul class="messages">
+{% for message in messages %}
+<li class="{{ message.tags }}">
+{{ message|safe }}
+<a href="#" class="close">x</a>
+</li>
+{% endfor %}
+</ul>
+{% endif %}
 <div id="content">
 {% block content %}
 {% endblock %}
